--- a/Todo_List/requirements.txt
+++ b/Todo_List/requirements.txt
@@ -26,7 +26,7 @@ oscrypto==1.3.0
 password-strength==0.0.3.post2
 Pillow==9.5.0
 prompt-toolkit==3.0.38
-psycopg2==2.9.7
+psycopg2-binary==2.9.7
 pycparser==2.21
 pydantic==1.10.8
 pyHanko==0.20.1
