--- a/Todo_List/requirements.txt
+++ b/Todo_List/requirements.txt
@@ -1,8 +1,10 @@
 amqp==5.1.1
+annotated-types==0.6.0
 arabic-reshaper==3.0.0
 asgiref==3.6.0
 asn1crypto==1.5.1
 billiard==4.1.0
+Brotli==1.1.0
 celery==5.3.1
 certifi==2023.5.7
 cffi==1.16.0
@@ -17,30 +19,46 @@ cssselect2==0.7.0
 Django==4.2
 django-bootstrap-datepicker-plus==5.0.3
 django-cors-headers==4.2.0
+django-easy-pdf==0.1.1
+django-webpush==0.3.5
 djangorestframework==3.14.0
+dnspython==2.4.2
+email-validator==2.1.0.post1
+fonttools==4.43.1
+gobject==0.1.0
 html5lib==1.1
+http-ece==1.1.0
 idna==3.4
+Jinja2==3.1.2
 kombu==5.3.1
 lxml==4.9.2
+MarkupSafe==2.1.3
 oscrypto==1.3.0
 password-strength==0.0.3.post2
 Pillow==9.5.0
 prompt-toolkit==3.0.38
-psycopg2-binary==2.9.7
+psycopg-binary==3.1.12
+py-vapid==1.9.0
 pycparser==2.21
-pydantic==1.10.8
+pydantic==2.4.2
+pydantic_core==2.10.1
+pydyf==0.8.0
 pyHanko==0.20.1
 pyhanko-certvalidator==0.24.1
+PyJWT==2.8.0
 pypdf==3.16.3
+pyphen==0.14.0
 pypng==0.20220715.0
 python-bidi==0.4.2
 python-dateutil==2.8.2
 python-decouple==3.8
+python-dotenv==1.0.0
 python-pptx==0.6.21
 pytz==2023.3.post1
 PyYAML==6.0.1
 qrcode==7.4.2
 redis==4.5.5
+render==1.0.0
 reportlab==3.6.13
 requests==2.31.0
 six==1.16.0
@@ -54,6 +72,8 @@ uritools==4.0.2
 urllib3==2.0.3
 vine==5.0.0
 wcwidth==0.2.6
+weasyprint==60.1
 webencodings==0.5.1
 xhtml2pdf==0.2.11
 XlsxWriter==3.1.0
+zopfli==0.2.3
