--- a/Todo_List/requirements.txt
+++ b/Todo_List/requirements.txt
@@ -1,5 +1,39 @@
+amqp==5.3.1
+asgiref==3.8.1
+billiard==4.2.1
+Brotli==1.1.0
+celery==5.4.0
+cffi==1.17.1
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cron-descriptor==1.4.5
 cryptography==42.0.8
+cssselect2==0.7.0
 Django==5.0.2
-Pillow==10.4.0
+django-celery-beat==2.7.0
+django-celery-results==2.5.1
+django-redis==5.4.0
+django-timezone-field==7.0
+fonttools==4.55.3
+html5lib==1.1
+kombu==5.4.2
+pillow==10.4.0
+prompt_toolkit==3.0.48
+pycparser==2.22
+pydyf==0.11.0
+pyphen==0.17.0
+python-crontab==3.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+redis==5.2.1
+six==1.17.0
+sqlparse==0.5.3
+tinycss2==1.4.0
+tzdata==2024.2
+vine==5.1.0
+wcwidth==0.2.13
 weasyprint==62.3
+webencodings==0.5.1
+zopfli==0.2.3.post1
